# claude-board

./: .gitignore  LICENSE  README.md
cli/: pyproject.toml
cli/claude_board_cli/: __main__.py
deploy/: Caddyfile  README.md  docker-compose.yml
desktop/: README.md  main.js  package-lock.json  package.json  preload.js
docs/: manifest-spec.md
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  Archives.tsx  Auth.tsx  Layout.ts  api.ts  storage.ts  styles.css  types.ts
server/: Dockerfile  pyproject.toml
server/claude_board/: __main__.py
