[project]
name = "claude-board-server"
version = "0.1.0"
description = "Manifest server for Claude Board — multi-tenant orchestration view of Claude sessions."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["claude_board*"]
